# auraeve

./: .dockerignore  .env.docker.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
auraeve/: __init__.py  __main__.py  config.example.json  config.example.toml  media_store.py  memory_lifecycle.py  profile_transfer.py  resource_store.py  runtime_bootstrap.py  runtime_channels.py  runtime_hot_reload.py  runtime_runner.py
deploy/: auraeve.service  one-click.ps1  one-click.sh  stop.ps1  stop.sh  update.ps1  update.sh
docker/: backend-funasr.Dockerfile  backend.Dockerfile  nginx.default.conf  webui.Dockerfile
docs/: SUBAGENT_ASYNC_FLOW.md  claude-code子智能体系统设计.md  后台子体通知流式显示问题分析与修复方案.md  命令行命令说明文档.md  子体系统使用文档.md  子体预算授权移除与按角色模型分配方案.md  子智能体系统重构方案.md  子智能体重构实施计划.md  技能系统使用说明.md  插件系统使用说明.md  整体功能分析与重构方案.md  斗地主游戏设计文档.md  节点系统使用文档.md
node_client/: __main__.py  client.py  commands.py  config.example.py  main.py
node_subagent/: main.py  reporter.py  runner.py
tests/: test_acp_channel_e2e.py  test_acp_connection.py  test_acp_dispatcher.py  test_acp_event_mapper.py  test_acp_main_integration.py  test_acp_protocol.py  test_acp_runtime.py  test_acp_session_mapper.py  test_agent_definitions.py  test_agent_tool.py  test_app_bootstrap.py  test_artifact_service.py  test_bash_tool_contract.py  test_bytedance_stt_provider.py  test_chat_console_service.py  test_chat_transcript_service.py  test_cli_runtime_startup.py  test_coding_agent_tool.py  test_command_projection.py  test_command_queue.py  test_config_channel_defaults.py  (+90 more)
(+372 files in other folders)
