[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auraeve"
version = "0.1.0"
description = "AuraEve multi-channel AI agent framework"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.30.0",
  "json-repair>=0.25.0",
  "loguru>=0.7.0",
  "httpx>=0.27.0",
  "chardet<6",
  "readability-lxml>=0.8.1",
  "dingtalk-stream>=0.19.0",
  "croniter>=2.0.0",
  "websockets>=12.0",
  "mcp>=1.0.0",
  "edge-tts>=6.1.12",
  "pilk>=0.2.0",
  "imageio-ffmpeg>=0.5.0",
  "numpy>=1.24.0",
  "tiktoken>=0.7.0",
  "playwright>=1.40.0",
  "pdfplumber>=0.10.0",
  "pdfminer.six>=20221105",
  "python-magic>=0.4.27",
  "pdf2image>=1.17.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
]

[project.scripts]
auraeve = "auraeve.cli.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["auraeve*"]
